// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberOfResults renders with plural suffix if it is 0 1`] = `
<span>
  <FormattedNumber>
    0
  </FormattedNumber>
   
  results
</span>
`;

exports[`NumberOfResults renders with plural suffix if it is more than 1 1`] = `
<span>
  <FormattedNumber>
    27276
  </FormattedNumber>
   
  results
</span>
`;

exports[`NumberOfResults renders with singular suffix if it is 1 1`] = `
<span>
  <FormattedNumber>
    1
  </FormattedNumber>
   
  result
</span>
`;
